Fix <rt> tag alignment

--- a/_sass/minimal_mistakes_plus/main.scss
+++ b/_sass/minimal_mistakes_plus/main.scss
@@ -209,3 +209,8 @@ span.underline {
   }
 }
 // ==== Enable sticky TOC for mobile [END] ====
+
+// Furigana
+rt {
+  ruby-align: center;
+}
